--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "boring-avatars": "^1.7.0",
+    "convert-svg-to-png": "^0.6.4",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
